--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-sans": "^0.2.3",
+    "@expo-google-fonts/dm-serif-display": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
