--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
     "styled-components": "^6.1.13",
     "typescript": "~5.3.3"
   },
